--- a/flexbox-hassane.html
+++ b/flexbox-hassane.html
@@ -54,6 +54,7 @@
 			margin: 20px;
 			background-color: #4bcffa;
 			font-family: 'Montserrat';
+			box-shadow: 0 10px 10px #000;
 		}
 		.img1{
 			width: 30%;
