--- a/flexbox-hassane.html
+++ b/flexbox-hassane.html
@@ -54,7 +54,8 @@
 			margin: 20px;
 			background-color: #4bcffa;
 			font-family: 'Montserrat';
-			box-shadow: 0 10px 10px #000;
+			box-shadow: 0 6px 10px 0 rgba(0,0,0,0.2);
+
 		}
 		.img1{
 			width: 30%;
@@ -83,11 +84,11 @@
 	<div class="header">
 		<ul class="menu">
 			<a href="#">Home</a>
-			<a href="#">About</a>
-			<a href="#">Services</a>
-			<a href="#">Works</a>
-			<a href="#">Contact</a>
-			<a href="#">Buy</a>
+			<a href="#">Teachers</a>
+			<a href="#">Cours</a>
+			<a href="#">Clubs</a>
+			<a href="#">Students</a>
+			<a href="#"><i class="fa fa-search"></i></a>
 		</ul>
 	</div>
 	<div class="all">
