--- a/club-said.html
+++ b/club-said.html
@@ -14,13 +14,13 @@
         <h1 class="txt">CLUBS</h1>
         <div class="header">
             <ul class="menu">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Works</a>
-                <a href="#">Contact</a>
-                <a href="#">Buy</a>
-            </ul>
+                <a href="/">Home</a>
+                <a href="flexbox-hassane.html">Teachers</a>
+                <a href="cours.html">Cours</a>
+                <a href="club-said.html">Clubs</a>
+                <a href="#">Students</a>
+                <a href="#"><i class="fa fa-search"></i></a>
+                </ul>
         </div>    
     </header>
     <section>
