--- a/clubs.html
+++ b/clubs.html
@@ -15,9 +15,9 @@
         <div class="header">
             <ul class="menu">
                 <a href="/">Home</a>
-                <a href="flexbox-hassane.html">Teachers</a>
+                <a href="teatchers.html">Teachers</a>
                 <a href="cours.html">Cours</a>
-                <a href="club-said.html">Clubs</a>
+                <a href="clubs.html">Clubs</a>
                 <a href="#">Students</a>
                 <a href="#"><i class="fa fa-search"></i></a>
                 </ul>
