--- a/teatchers.html
+++ b/teatchers.html
@@ -4,9 +4,6 @@
 	<title>flexbox</title>
 	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 	<style type="text/css">
-		body{
-			
-		}
 		.txt{
 			text-align: center;
 			font-family: 'Snowboarding';
@@ -83,13 +80,12 @@
 	<h1 class="txt">TEACHERS</h1>
 	<div class="header">
 		<ul class="menu">
-			<a href="#">Home</a>
-			<a href="#">Teachers</a>
-			<a href="#">Cours</a>
-			<a href="#">Clubs</a>
+			<a href="teatchers.html">Teachers</a>
+			<a href="cours.html">Cours</a>
+			<a href="clubs.html">Clubs</a>
 			<a href="#">Students</a>
 			<a href="#"><i class="fa fa-search"></i></a>
-		</ul>
+	</ul>
 	</div>
 	<div class="all">
 		<div class="tooo">
