--- a/teatchers.html
+++ b/teatchers.html
@@ -80,6 +80,7 @@
 	<h1 class="txt">TEACHERS</h1>
 	<div class="header">
 		<ul class="menu">
+			<a href="/">Home</a>
 			<a href="teatchers.html">Teachers</a>
 			<a href="cours.html">Cours</a>
 			<a href="clubs.html">Clubs</a>
