--- a/clubs.html
+++ b/clubs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clubs</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="stylesheet" href="said-css.css">
+    <link rel="stylesheet" href="styles/said-css.css">
 
 </head>
 <body>
@@ -14,45 +14,45 @@
         <h1 class="txt">CLUBS</h1>
         <div class="header">
             <ul class="menu">
-                <a href="/">Home</a>
+                <a href="index.html">Home</a>
                 <a href="teatchers.html">Teachers</a>
                 <a href="cours.html">Cours</a>
                 <a href="clubs.html">Clubs</a>
-                <a href="#">Students</a>
+                <a href="students.html">Students</a>
                 <a href="#"><i class="fa fa-search"></i></a>
                 </ul>
         </div>    
     </header>
     <section>
         <div class="clube">
-            <img src="img-said/lecture-N3.jpg" alt="lecture">
-            <h2>club lecture</h2>
+            <img src="img/img-said/lecture-N3.jpg" alt="lecture">
+            <h2>Club de Lecture</h2>
             <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
         </div>
         <div class="clube">
-            <img src="img-said/ca.jpg" alt="lecture">
-            <h2>club lecture</h2>
-            <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
+            <img src="img/img-said/ca.jpg" alt="club l'art">
+            <h2>Club d'art</h2>
+            <p>Le Club de l'Art est un site ouvert à tous les amoureux de l'art désirant acquérir ou approfondir leurs connaissances en histoire de l'art.</p>
         </div>
         <div class="clube">
-            <img src="img-said/fraternité.jpg" alt="lecture">
-            <h2>club lecture</h2>
-            <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
+            <img src="img/img-said/fraternité.jpg" alt="lecture">
+            <h2>Club Citoyenne</h2>
+            <p>L'adhésion à des clubs ou associations renforce le développement personnel et l'épanouissement de l'étudiant et permet de former des managers ... </p>
         </div>
         <div class="clube">
-            <img src="img-said/leadImage.jpg" alt="lecture">
-            <h2>club lecture</h2>
-            <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
+            <img src="img/img-said/leadImage.jpg" alt="lecture">
+            <h2>Club d'Evenement</h2>
+            <p>Les événements célébrés au sein de la maternelle visent à éduquer l'enfant sur les principes d'une identité marocaine propre ( Achoura, Journée du Tajine, ...</p>
         </div>
         <div class="clube">
-            <img src="img-said/sport-club.jpg" alt="lecture">
-            <h2>club lecture</h2>
-            <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
+            <img src="img/img-said/sport-club.jpg" alt="lecture">
+            <h2>Club de Sport</h2>
+            <p>une infrastructure encadrant les sportifs. Il est composé de membres et ...</p>
         </div>
         <div class="clube">
-            <img src="img-said/tech-c.png" alt="lecture">
-            <h2>club lecture</h2>
-            <p>Un club de lecture, ou cercle de lecture, est un regroupement de lecteurs qui lisent un même livre, pour ensuite en discuter.</p>
+            <img src="img/img-said/tech-c.png" alt="lecture">
+            <h2>Club Tech</h2>
+            <p>En Club Tech encuentras las últimas noticias de tecnología sobre todo noticias de smartphones, gadgets, junto a las mejores ofertas y chollos en tecnología.</p>
         </div>
     </section>
 </body>
