--- a/clubs.html
+++ b/clubs.html
@@ -16,7 +16,7 @@
             <ul class="menu">
                 <a href="index.html">Home</a>
                 <a href="teatchers.html">Teachers</a>
-                <a href="cours.html">Cours</a>
+                <a href="coures.html">Cours</a>
                 <a href="clubs.html">Clubs</a>
                 <a href="students.html">Students</a>
                 <a href="#"><i class="fa fa-search"></i></a>
