--- a/coures.html
+++ b/coures.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>FlexBox</title>
-	<link rel="stylesheet" type="text/css" href="css.css">
+	<link rel="stylesheet" type="text/css" href="styles/ach.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> 
@@ -24,49 +24,49 @@
 <div class="co-container">
 <div class="container">
 	<div class="container-ar">
-		<img src="cloud.jpg">
+		<img src="img/achraf/cloud.jpg">
 		<h1>Cloud Computing</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="data.jpg">
+		<img src="img/achraf/data.jpg">
 		<h1>Big Data</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="archi.jpg">
+		<img src="img/achraf/archi.jpg">
 		<h1>Architecture</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="physiques.jpg">
+		<img src="img/achraf/physiques.jpg">
 		<h1>Physics</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="spanish.jpg">
+		<img src="img/achraf/spanish.jpg">
 		<h1>Langue espagnol</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="fr.jpg">
+		<img src="img/achraf/fr.jpg">
 		<h1>Langue française</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="math.jpg">
+		<img src="img/achraf/math.jpg">
 		<h1>Mathematics</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
 	</div>
 	<div class="container-ar">
-		<img src="arabic.jpg">
+		<img src="img/achraf/arabic.jpg">
 		<h1>Langue arabe</h1>
 		<article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		  </article>
